[package]
name = "fastwc"
version = "0.2.0"
description = "a fast wc rewrite"
license = "GPL-3.0-or-later"
repository = "https://github.com/CallMeAlphabet/fastwc"
edition = "2021"

[dependencies]
unicode-width = "0.1"
memmap2 = "0.9"
rayon = "1.10"
libc = "0.2"
clihelp = "0.1"

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = "symbols"
